--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ install:
   - echo "install nothing"
 
 before_install:
-  - docker pull ciriethereum/ciri:latest
+  - docker pull ciriethereum/ciri-p2p-test:latest
 
 script:
-  - docker run -v `pwd`:/app --rm ciriethereum/ciri:latest bash -c 'bundle install && bundle exec rspec'
+  - docker run -v `pwd`:/app --rm ciriethereum/ciri-p2p-test:latest bash -c 'bundle install && bundle exec rake'
 
